# deployment-queue-cli

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CODESTYLE.md  USAGE.md
src/deployment_queue_cli/: __init__.py  auth.py  client.py  config.py  main.py  mcp_server.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_main.py  test_mcp_server.py
